# eink-weather-panel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config-small.example.yaml  config.example.yaml  config.schema  pyproject.toml  renovate.json
.github/workflows/: regression.yaml  test.yaml
.gitlab/: ci-local.yml
doc/: architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
kubernetes/: eink-weather-panel.yaml
react/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
react/src/: App.tsx  index.css
react/tests/evidence/: index.htm
src/: create_image.py  display_image.py  healthz.py  metrics_worker.py  webui.py
src/weather_display/: config.py  display.py  timing_filter.py
src/weather_display/metrics/: __init__.py  collector.py  server.py
src/weather_display/metrics/webapi/: page.py  schemas.py
src/weather_display/metrics/webapi/static/: chart-functions.js  metrics-loader.js  metrics.js
src/weather_display/panel/: power_graph.py  rain_cloud.py  rain_fall.py  sensor_graph.py  sensor_graph_utils.py  time.py  wbgt.py  weather.py
src/weather_display/runner/webapi/: run.py  schemas.py
tests/: conftest.py  test_basic.py  test_playwright.py
tests/e2e/: __init__.py  conftest.py  test_webapp.py
tests/integration/: __init__.py  test_create_image.py  test_display_image.py  test_display_ssh.py  test_panels.py  test_power_graph_panel.py  test_rain_cloud_panel.py  test_rain_fall_panel.py  test_sensor_graph_panel.py  test_wbgt_panel.py  test_weather_panel.py
tests/unit/: __init__.py  test_config.py  test_config_edge.py  test_display.py  test_healthz.py  test_metrics_collector.py  test_metrics_server.py  test_page.py  test_page_js.py  test_rain_cloud_unit.py  test_rain_fall_unit.py  test_rain_fall_utils.py  test_sensor_graph_unit.py  test_sensor_graph_utils.py  test_time.py  test_timing_filter.py  test_wbgt.py  test_weather_calc.py  test_weather_edge.py  test_webapi_run.py  test_webapi_run_api.py  test_webui.py
tests/webapp/: __init__.py  test_api.py  test_metrics_api.py
