[project]
name = "e-ink_weather_panel"
version = "0.1.0"
description = "電子ペーパディスプレイに，Raspberry Pi を通じて下記の情報を表示するためのスクリプトです．"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "influxdb-client[ciso]>=1.44.0",
    "my-lib @ git+https://github.com/kimata/my-py-lib@6a8e9e96992a83b6ec34f1de3846b2171ee3e6c2",
    "opencv-contrib-python-headless>=4.10.0.84",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "selenium>=4.23.1",
    "paramiko>=3.4.1",
    "docopt-ng>=0.9.0",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.0",
    "undetected-chromedriver>=3.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "flaky>=3.8.1",
    "playwright>=1.45.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.5.1",
    "pytest-xdist>=3.6.1",
    "time-machine>=2.15.0",
    "pytest>=8.3.2",
    "pytest-timeout>=2.4.0",
    "mypy>=1.14.0",
    "types-pytz>=2024.1.0",
    "types-paramiko>=3.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
my-lib = { path = "/home/kimata/github/my-py-lib", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_display"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"

# Default: parallel execution with 4 workers
# To exclude slow Selenium tests: uv run pytest -m "not selenium"
# E2E テストはデフォルトで除外（外部サーバーが必要なため）
# E2E テスト実行: uv run pytest tests/e2e/ --host <host> --port <port>
addopts = "--verbose --timeout=300 --durations=10 --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --html=reports/pytest.html --self-contained-html --cov=src --cov-report=html -n 4 --ignore=tests/e2e"

testpaths = [
    "tests",
]

markers = [
    "selenium: tests that require Selenium/Chrome (slow, run separately)",
    "e2e: end-to-end tests using Playwright (requires running webapp)",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing\\.popen_fork",
    "ignore:unclosed database.*:ResourceWarning:rich.*",
    "ignore:unclosed database.*:ResourceWarning:influxdb_client.*",
    "ignore:unclosed database.*:ResourceWarning:coverage.*",
    "ignore:unclosed database.*:ResourceWarning:time_machine.*",
    "ignore:unclosed database.*:ResourceWarning:werkzeug.*",
    "ignore:unclosed database.*:ResourceWarning:_pytest.*",
    "ignore:unclosed database.*:ResourceWarning:typing.*",
    "ignore:unclosed database.*:ResourceWarning:multiprocessing.*",
    "ignore:unclosed database.*:ResourceWarning:logging.*",
    "ignore::ResourceWarning:_pytest.unraisableexception",
    "ignore::ResourceWarning:coverage.sqldata"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下，未使用関数
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# 段階的に厳格化するため、最初は緩めの設定
check_untyped_defs = false
disallow_untyped_defs = false
# 現在のエラーを一時的に無視（段階的に対応）
disable_error_code = [
    "var-annotated",    # Need type annotation for variable
    "assignment",       # Incompatible types in assignment
    "arg-type",         # Argument has incompatible type
    "index",            # Value is not indexable
    "return-value",     # Incompatible return value type
    "operator",         # Unsupported operand type
    "attr-defined",     # Has no attribute
]
